# xts_tools

./: OAT.xml  README_zh.md  bundle.json
ability/actsapplicationsuppressstartuptest/: BUILD.gn  Test.json  build-profile.json5  hvigorfile.ts  local.properties
ability/actsdeeplinkdemotowtest/: BUILD.gn  build-profile.json5  code-linter.json5  hvigorfile.ts  oh-package.json5
ability/actsdeeplinktowtest/: BUILD.gn  Test.json  build-profile.json5  hvigorw  oh-package.json5
ability/actsembeddeduiextensiontest/: build-profile.json5
ability/actssystemapplicationsuppressstartuptest/: Test.json  build-profile.json5  code-linter.json5  oh-package.json5
ability/actsthirdapplicationatest/: build-profile.json5  code-linter.json5
ability/actsthirdapplicationbtest/: BUILD.gn  build-profile.json5  hvigorfile.ts  oh-package-lock.json5
arkts_static_test/02_LexicalElements/: LexicalElements_Examples.md  (+1 more)
ci/: Utils.py  ci_manager.py  generate_accurate_targets.py  targetUtils.py  utils.py  xts_accurate_build.py
config/: ci_api_ignore.json  ci_api_part_name.json  ci_escape.json  ci_match_config.json  ci_target_white_list.json  ci_uncompile_suite.json  precise_compilation.json
docs/: BUILD_TROUBLESHOOTING.md  accurate-build-config-guide.md
hvigor_update/: batch_update_hvigor.sh  batch_update_static.sh  update-1.2.js
hypium_static/: core.ets  interface.ets  util.ets
lite/: README.md  README_zh.md  build.sh  buildFun.sh  buildUtils.sh
lite/hctest/: BUILD.gn  hctest_opt_args.gni
lite/hctest/include/: hctest.h  hctest_internal.h  unity_config.h
lite/hctest/src/: hctest.c  hctest_service.c
lite/others/query/: BUILD.gn
lite/others/query/src/: QueryMainSmall.cpp
others/query/: BUILD.gn
others/query/src/: QueryMainStandard.cpp
reftest/: FileAPI.py  Tool.py  acid.py  animation_worklet.py  apng.py  avif.py  compat.py  content_dpr.py  contenteditable.py  custom_elements.py  data.py  density_size_correction.py  document_policy.py  dom.py  encoding.py  feature_policy.py  fetch.py  forced_colors_mode.py  fullscreen.py  infrastructure.py  lifecycle.py  mathml.py  permissions_policy.py  portals.py  preload.py  quirks.py  resize_observer.py  scroll_animations.py  selection.py  service_workers.py  shadow_dom.py  svg.py  web_animations.py  wpt_css_one.py  wpt_css_two.py  wpt_html.py
sample/ability/ability_runtime/: BUILD.gn
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/: BUILD.gn  Test.json  build-profile.json5
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/AppScope/: app.json5
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/entry/: oh-package.json5
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/entry/src/main/: module.json5
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/entry/src/ohosTest/: module.json5  syscap.json
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/entry/src/ohosTest/ets/test/: List.test.ets  createBundleContext.test.ets
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/hvigor/: hvigor-config.json5
sample/ability/ability_runtime/actscreatebundlecontextnormaltest/signature/: openharmony_sx.p7b
sample/ability/ability_runtime/actscreatebundlecontexttest/: BUILD.gn  Test.json  build-profile.json5  hvigorw.bat
sample/ability/ability_runtime/actscreatebundlecontexttest/AppScope/: app.json5
sample/ability/ability_runtime/actscreatebundlecontexttest/entry/src/main/: module.json5
sample/ability/ability_runtime/actscreatebundlecontexttest/entry/src/main/ets/entryability/: EntryAbility.ts
sample/ability/ability_runtime/actscreatebundlecontexttest/entry/src/ohosTest/: module.json5
sample/ability/ability_runtime/actscreatebundlecontexttest/entry/src/ohosTest/ets/test/: List.test.ets  createBundleContext.test.ets  createModuleContext.test.ets
sample/ability/ability_runtime/actscreatebundlecontexttest/signature/: openharmony_sx.p7b
sample/ability/ability_runtime/actscreatecontextnopermissiontest/: BUILD.gn  Test.json  hvigorfile.ts
sample/ability/ability_runtime/actscreatecontextnopermissiontest/AppScope/: app.json5
sample/ability/ability_runtime/actscreatecontextnopermissiontest/entry/: build-profile.json5
sample/ability/ability_runtime/actscreatecontextnopermissiontest/entry/src/main/ets/entryability/: EntryAbility.ts
sample/ability/ability_runtime/actscreatecontextnopermissiontest/entry/src/ohosTest/ets/test/: createBundleContext.test.ets
sample/ability/ability_runtime/actscreatecontextnopermissiontest/entry/src/ohosTest/ets/testability/pages/: Index.ets
sample/ability/ability_runtime/actscreatecontextnopermissiontest/hvigor/: hvigor-wrapper.js
sample/ability/ability_runtime/actscreatecontextnopermissiontest/signature/: openharmony_sx.p7b
sample/window/windowErrCode/: BUILD.gn  Test.json  oh-package.json5
sample/window/windowErrCode/AppScope/: app.json5
sample/window/windowErrCode/AppScope/resources/base/element/: string.json
sample/window/windowErrCode/entry/: build-profile.json5  hvigorfile.ts
sample/window/windowErrCode/entry/src/main/: module.json5  syscap.json
sample/window/windowErrCode/entry/src/main/ets/pages/: Index.ets
sample/window/windowErrCode/entry/src/ohosTest/: module.json5
sample/window/windowErrCode/entry/src/ohosTest/ets/test/: List.test.ets  windowErrCode202_1.test.ets  windowErrCode202_2.test.ets
sample/window/windowErrCode/entry/src/ohosTest/ets/testability/: StartAbility.ets  TestAbility.ets
sample/window/windowErrCode/entry/src/ohosTest/ets/testability/pages/: Index.ets
sample/window/windowErrCode/entry/src/ohosTest/ets/testability/pages/second/: PageOne.ets
sample/window/windowErrCode/entry/src/ohosTest/ets/testability/pages/windowTest/: WindowTest.ets
sample/window/windowErrCode/entry/src/ohosTest/ets/testrunner/: OpenHarmonyTestRunner.ts
sample/window/windowErrCode/entry/src/ohosTest/resources/base/profile/: test_pages.json
sample/window/windowErrCode/signature/: openharmony_sx.p7b
standard_check/: check_hvigor.py
xts-project-tools/: .gitignore
(+21743 files in other folders)
