# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//test/xts/device_attest/build/devattestconfig.gni")
import("//test/xts/tools/build/suite.gni")

ohos_executable("queryStandard") {
  sources = [ "src/QueryMainStandard.cpp" ]

  include_dirs = [ "src" ]

  external_deps = [
    "c_utils:utils",
    "device_attest:devattest_sdk",
    "init:libbegetutil",
  ]

  subsystem_name = "xts"
  part_name = "tools"
}

ohos_copy("cpQueStan") {
  sources = [ "$root_out_dir/xts/tools/queryStandard" ]
  outputs = [ "$root_out_dir/suites/${XTS_SUITENAME}/config" ]
  deps = [ ":queryStandard" ]
  subsystem_name = "xts"
  part_name = "tools"
}

group("libQuery") {
  testonly = true
  if (is_standard_system) {
    deps = [
      ":cpQueStan",
      ":queryStandard",
    ]
  }
}
