# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/lite/config/component/lite_component.gni")
import("//test/xts/tools/lite/build/common.gni")
import("//test/xts/tools/lite/build/suite_lite.gni")

executable("querySmall") {
  output_extension = "bin"
  sources = [ "src/QueryMainSmall.cpp" ]

  include_dirs = [
    "./src/QueryMainSmall.cpp",
    "//base/startup/init/interfaces/innerkits/include/syspara",
    "//test/xts/device_attest_lite/interfaces/innerkits",
  ]

  deps = [ "//base/startup/init/interfaces/innerkits:libbegetutil" ]
  if (os_level != "mini") {
    deps += [ "//test/xts/device_attest_lite/framework:devattest_client" ]
  }

  cflags = [ "-Wno-error" ]
  ldflags = [
    "-lstdc++",
    "-lm",
    "-lpthread",
    "-s",
  ]
}

copy("query_copy") {
  sources = [ "$root_out_dir/bin/querySmall.bin" ]
  outputs = [ "$root_out_dir/suites/acts/resource/tools/querySmall.bin" ]
  deps = [ ":querySmall" ]
}

group("libQuery") {
  if (ohos_kernel_type == "liteos_a" || ohos_kernel_type == "linux") {
    deps = [
      ":querySmall",
      ":query_copy",
    ]
  }
}
